fix: add protected routes for api only authenticated users can access the resources
